testsuite/bsc.typechecker/kind/DataDefParamConflictingUses.bs.bsc-out.expected
checking package dependencies
compiling DataDefParamConflictingUses.bs
Error: "DataDefParamConflictingUses.bs", line 5, column 33: (T0027)
  The numeric type `b' was found where a value type was expected.
